@@ -27,25 +27,33 @@ task :environment do
   end
 end
 
-desc "Displays a listing of the named routes within a project"
+# lists all routes of a given app
+def list_app_routes(app, args)
+  app_routes = app.named_routes
+  app_routes.reject! { |r| r.identifier.to_s !~ /#{args.query}/ } if args.query.present?
+  app_routes.map! { |r| [r.verb, r.name, r.path] }
+  return if app_routes.empty?
+  shell.say "\nApplication: #{app.app_class}", :yellow
+  app_routes.unshift(["REQUEST", "URL", "PATH"])
+  max_col_1 = app_routes.max { |a, b| a[0].size <=> b[0].size }[0].size
+  max_col_2 = app_routes.max { |a, b| a[1].size <=> b[1].size }[1].size
+  app_routes.each_with_index do |row, i|
+    message = [row[1].ljust(max_col_2+2), row[0].center(max_col_1+2), row[2]]
+    shell.say("    " + message.join(" "), i==0 ? :bold : nil)
+  end
+end
+
+desc "Displays a listing of the named routes within a project, optionally only those matched by [query]"
 task :routes, :query, :needs => :environment do |t, args|
   Padrino.mounted_apps.each do |app|
-    app_routes = app.app_object.router.routes
-    app_routes.reject! { |r| r.named.blank? || r.as_options[:conditions][:request_method].try(:first) == 'HEAD' }
-    app_routes.reject! { |r| r.named.to_s !~ /#{args.query}/ } if args.query.present?
-    next if app_routes.empty?
-    shell.say "\nApplication: #{app.name}", :yellow
-    app_routes.map! do |route|
-      name_string     = "(#{route.named.to_s.split("_").map { |piece| %Q[:#{piece}] }.join(", ")})"
-      request_method = route.as_options[:conditions][:request_method].try(:first)
-      [request_method, name_string, route.path]
-    end
-    app_routes.unshift(["REQUEST", "URL", "PATH"])
-    max_col_1 = app_routes.max { |a, b| a[0].size <=> b[0].size }[0].size
-    max_col_2 = app_routes.max { |a, b| a[1].size <=> b[1].size }[1].size
-    app_routes.each_with_index do |row, i|
-      message = [row[1].ljust(max_col_2+2), row[0].center(max_col_1+2), row[2]]
-      shell.say("    " + message.join(" "), i==0 ? :bold : nil)
-    end
+    list_app_routes(app, args)
+  end
+end
+
+desc "Displays a listing of the named routes a given app [app]"
+namespace :routes do
+  task :app, :app, :needs => :environment do |t, args|
+    app = Padrino.mounted_apps.find { |app| app.app_class == args.app }
+    list_app_routes(app, args) if app
   end
 end
