@@ -2,6 +2,9 @@
 
 == 0.9.13 (Unreleased)
 
+* Fixed a naming bug in relation to using classify to manipulate project name
+* Refactored and enhanced rake routes (and rake routes:app)
+
 == 0.9.12
 
 * Deprecated mount_core and remove references
